--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,13 @@
         android:id="@+id/buttonMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:background="#E91E63"
         android:text="Go Next"
-        android:textColor="#FFF" />
+        android:textColor="#FFF"
+        tools:ignore="TextContrastCheck" />
 
 
 </RelativeLayout>
