--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -18,13 +18,14 @@
         android:id="@+id/buttonGoSharing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:background="#E91E63"
-        android:textColor="#FFF"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:text="Go Sharing" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="#E91E63"
+        android:text="Go Sharing"
+        android:textColor="#FFF"
+        tools:ignore="TextContrastCheck" />
 
 </RelativeLayout>
