--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -23,28 +23,35 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="43dp"
             android:ems="10"
-            android:inputType="phone" />
+            android:inputType="phone"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:drawable/ic_menu_call"
             android:layout_alignBottom="@+id/editTextPhone"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:background="@android:drawable/ic_menu_call"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <EditText
             android:id="@+id/editTextWeb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/editTextPhone"
-            android:layout_alignLeft="@+id/editTextPhone"
-            android:layout_alignRight="@+id/editTextPhone"
-            android:layout_alignStart="@+id/editTextPhone"
             android:layout_below="@+id/editTextPhone"
+            android:layout_alignStart="@+id/editTextPhone"
+            android:layout_alignLeft="@+id/editTextPhone"
+            android:layout_alignEnd="@+id/editTextPhone"
+            android:layout_alignRight="@+id/editTextPhone"
             android:layout_marginTop="65dp"
-            android:inputType="text" />
+            android:inputType="text"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/imageButtonWeb"
@@ -52,21 +59,24 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/editTextWeb"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="@android:drawable/ic_menu_view"
-            android:layout_alignParentRight="true" />
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </RelativeLayout>
-
 
 
     <ImageButton
         android:id="@+id/imageButtonCamera"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:src="@android:drawable/ic_menu_camera"
-        android:background="#E91E63"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="#E91E63"
+        android:src="@android:drawable/ic_menu_camera"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
 </RelativeLayout>
